feat: добавил score таблицу и обновление score после ответа на вопрос + небольшой рефакторинг